feat: 补充CLI架构定位说明
**更新内容**：

**原型设计文档_v0.7**：
- 新增1.2 产品架构：Web + CLI双模式说明
- 新增5.2 CLI工具（后期可选）功能规划
  - 命令行操作（init, task, skill, git）
  - 本地Skill执行（直接调用Claude API）
  - Git深度集成
- 更新5.1技术选型为Vue 3 + TypeScript + Naive UI

**架构设计文档_v0.7**：
- 新增产品架构：Web + CLI双模式说明
- 新增7.3 CLI工具设计（后期可选）
  - CLI功能规划
  - CLI架构设计图
  - CLI优势说明

**核心变更**：
- MVP阶段专注Web平台，CLI作为后期可选增强
- CLI优势：无需浏览器兼容，开发更高效
- 一人+AI开发友好

文件：
- prototype/原型设计文档_v0.7.md (更新)
- architecture/架构设计文档_v0.7.md (更新)

--- a/architecture/架构设计文档_v0.7.md
+++ b/architecture/架构设计文档_v0.7.md
@@ -1,13 +1,44 @@
 # AI Project Management Platform - 架构设计文档 v0.7
 
 > **版本说明**：基于v0.7需求设计的系统架构和技术选型  
-> **核心原则**：一人+AI开发优先，开源社区易上手
+> **核心原则**：一人+AI开发优先，开源社区易上手  
+> **架构模式**：Web平台为核心，CLI作为后期可选增强
 
 ---
 
 ## 一、技术选型决策
 
-### 1.1 选型原则
+### 1.1 产品架构：Web + CLI双模式
+
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│                          产品架构说明                                      │
+│                                                                             │
+│  MVP阶段（v0.7-v1.0）：                                                  │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │                       Web平台 (核心)                                  │   │
+│  │  ├─ 发起人：项目发布、验收管理、结算                                │   │
+│  │  ├─ 参与者：任务大厅、任务执行、成本看板                           │   │
+│  │  └─ 通用：用户系统、Skill配置、个人档案                            │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                    │                                      │
+│                                    ▼                                      │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │                       CLI工具 (后期可选)                              │   │
+│  │  ├─ 本地Skill执行（直接调用Claude API）                            │   │
+│  │  ├─ Git深度集成（自动分析commit、PR）                              │   │
+│  │  └─ 开发者友好工具链                                               │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                             │
+│  架构决策：                                                              │
+│  ├─ MVP专注Web平台，确保核心体验                                         │
+│  ├─ CLI作为后期增强，不在MVP范围内                                        │
+│  └─ CLI优势：无需浏览器兼容，开发更高效                                   │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 1.2 选型原则
 
 ```
 选型优先级（一人+AI开发）：
@@ -616,8 +647,69 @@ P2 (可以有)：
 └─ 数据分析
 ```
 
+### 7.3 CLI工具设计（后期可选）
+
+```
+CLI工具设计（v1.0+可选）：
+
+功能规划：
+├─ 命令行操作
+│  ├─ aipm init          # 初始化项目
+│  ├─ aipm task list    # 查看任务列表
+│  ├─ aipm task claim   # 认领任务
+│  ├─ aipm skill run    # 执行Skill
+│  └─ aipm git sync    # Git同步
+│
+├─ 本地Skill执行
+│  ├─ 直接调用Claude API
+│  ├─ 无需浏览器，纯本地执行
+│  └─ 输出到本地文件
+│
+└─ Git深度集成
+    ├─ 自动分析commit记录
+    ├─ 验证代码贡献
+    └─ 同步到平台
+
+CLI架构设计：
+┌─────────────────────────────────────────────────────────────────────────────┐
+│                          CLI工具架构                                        │
+│                                                                             │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │                       CLI入口 (commander.js)                         │   │
+│  │   ├─ 命令解析                                                      │   │
+│  │   ├─ 参数处理                                                      │   │
+│  │   └─ 路由到对应模块                                                │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                    │                                      │
+│                                    ▼                                      │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │                       Core模块                                        │   │
+│  │   ├─ ConfigManager     # 配置管理                                    │   │
+│  │   ├─ APIClient       # API调用                                      │   │
+│  │   └─ GitAnalyzer     # Git分析                                      │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                    │                                      │
+│              ┌─────────────────────┼─────────────────────┐              │
+│              ▼                     ▼                     ▼              │
+│  ┌─────────────────┐   ┌─────────────────┐   ┌─────────────────┐   │
+│  │ Claude SDK       │   │ Git Command     │   │ Local File      │   │
+│  └─────────────────┘   └─────────────────┘   └─────────────────┘   │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+
+CLI优势：
+├─ 无需处理浏览器兼容性问题
+├─ 开发效率更高（一人+AI友好）
+├─ 适合技术人员使用
+├─ 可离线工作
+└─ 资源占用更低
+
+注意：CLI不替代Web平台，而是作为增强工具
+```
+
 ---
 
 **文档版本**: v0.7
 **更新日期**: 2026-02-18
 **核心原则**：一人+AI开发优先，开源社区易上手
+**架构模式**：Web平台为核心，CLI后期可选增强
