--- a/prototype/原型设计文档_v0.7.md
+++ b/prototype/原型设计文档_v0.7.md
@@ -1,6 +1,7 @@
 # AI Project Management Platform - 原型设计文档 v0.7
 
-> **版本说明**：基于v0.7需求规格设计的原型，涵盖MVP核心页面和交互流程
+> **版本说明**：基于v0.7需求规格设计的原型，涵盖MVP核心页面和交互流程  
+> **架构说明**：Web平台为核心，CLI作为后期可选增强
 
 ---
 
@@ -16,7 +17,37 @@ MVP原型设计：
 └─ 可用于用户测试
 ```
 
-### 1.2 角色与页面映射
+### 1.2 产品架构：Web + CLI双模式
+
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│                          产品架构说明                                      │
+│                                                                             │
+│  MVP阶段（v0.7-v1.0）：                                                  │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │                       Web平台 (核心)                                  │   │
+│  │  ├─ 发起人：项目发布、验收管理、结算                                │   │
+│  │  ├─ 参与者：任务大厅、任务执行、成本看板                           │   │
+│  │  └─ 通用：用户系统、Skill配置、个人档案                            │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                    │                                      │
+│                                    ▼                                      │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │                       CLI工具 (后期可选)                            │   │
+│  │  ├─ 本地Skill执行（直接调用Claude API）                          │   │
+│  │  ├─ Git深度集成（自动分析commit、PR）                            │   │
+│  │  └─ 开发者友好工具链                                             │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                             │
+│  架构决策：                                                              │
+│  ├─ MVP专注Web平台，确保核心体验                                         │
+│  ├─ CLI作为后期增强，不在MVP范围内                                      │
+│  └─ CLI无需处理浏览器兼容性问题，开发更高效                             │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 1.3 CLI定位说明
 
 | 角色 | 核心页面 | 说明 |
 |------|----------|------|
@@ -732,15 +763,54 @@ MVP组件库：
 ### 5.1 前端技术选型
 
 ```
-推荐技术栈：
-├─ 前端框架：React 18 + TypeScript
-├─ UI组件库：Ant Design 5.x
-├─ 状态管理：Zustand
-├─ 路由：React Router 6
+推荐技术栈（Vue 3 + TypeScript）：
+├─ 前端框架：Vue 3 + TypeScript
+├─ UI组件库：Naive UI (Vue生态友好)
+├─ 状态管理：Pinia
+├─ 路由：Vue Router 6
 └─ HTTP请求：Axios
+
+选型理由：
+├─ Vue 3学习成本低，中文文档友好
+├─ Naive UI对TypeScript支持好，主题丰富
+├─ Pinia是Vue官方推荐的状态管理
+└─ 一人+AI开发效率优先
 ```
 
-### 5.2 页面优先级
+### 5.2 CLI工具（后期可选）
+
+```
+CLI工具设计（v1.0+可选）：
+
+功能规划：
+├─ 命令行操作
+│  ├─ aipm init          # 初始化项目
+│  ├─ aipm task list    # 查看任务列表
+│  ├─ aipm task claim   # 认领任务
+│  ├─ aipm skill run    # 执行Skill
+│  └─ aipm git sync    # Git同步
+│
+├─ 本地Skill执行
+│  ├─ 直接调用Claude API
+│  ├─ 无需浏览器，纯本地执行
+│  └─ 输出到本地文件
+│
+└─ Git深度集成
+    ├─ 自动分析commit记录
+    ├─ 验证代码贡献
+    └─ 同步到平台
+
+CLI优势：
+├─ 无需处理浏览器兼容性问题
+├─ 开发效率更高
+├─ 适合技术人员使用
+├─ 可离线工作
+└─ 资源占用更低
+
+注意：CLI不替代Web平台，而是作为增强工具
+```
+
+### 5.3 页面优先级
 
 ```
 MVP页面优先级：
